--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,2 @@
 <h1>the page i for clint nd page 21</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias maiores voluptatum repudiandae saepe aperiam asperiores velit nam dolores, ullam ipsa laborum, officia odio quo cupiditate.</p>
